<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <TextView
        android:id="@+id/tvProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginHorizontal="@dimen/margin_standard_large"
        android:layout_marginVertical="@dimen/margin_standard"
        android:text="@string/profile"
        android:textSize="@dimen/text_size_standard"
        android:textColor="@color/white"
        android:fontFamily="@font/text_font_style_bold"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/avatarProfile"
        app:layout_constraintBottom_toTopOf="@id/avatarProfile"
        android:text="@string/avatar"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_small"
        android:fontFamily="@font/text_font_style_bold"
        android:clickable="true"
        android:focusable="true" />


    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/avatarProfile"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/tvProfile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginVertical="@dimen/margin_standard_large"
        app:layout_constraintWidth_percent="0.4"
        app:layout_constraintDimensionRatio="1:1"
        android:src="@drawable/user_img"
        android:scaleType="centerCrop"
        app:shapeAppearanceOverlay="@style/ShapeProfileImage"
        />

    <TextView
        android:id="@+id/tvPhoneNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/avatarProfile"
        app:layout_constraintStart_toStartOf="@id/avatarProfile"
        app:layout_constraintEnd_toEndOf="@id/avatarProfile"
        android:textColor="@color/text_color_transparent"
        android:textSize="@dimen/text_size_small"
        tools:text="+9989911111"
        android:layout_marginVertical="@dimen/margin_standard_large"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewProfile"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvPhoneNumber"
        app:cardBackgroundColor="@color/bg_color"
        app:cardElevation="@dimen/margin_small"
        android:layout_marginTop="@dimen/margin_standard_large"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_card_view"
            android:orientation="vertical"
            >

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_standard"
                android:layout_marginTop="@dimen/margin_standard"
                android:layout_marginBottom="@dimen/margin_small"
                android:hint="@string/name"
                android:textColorHint="@color/text_color_transparent"
                />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_standard"
                android:layout_marginVertical="@dimen/margin_small"
                android:hint="@string/username"
                android:enabled="false"
                android:focusable="false"
                android:cursorVisible="false"
                android:textColorHint="@color/text_color_transparent"
                />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etBirthday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_standard"
                android:layout_marginVertical="@dimen/margin_small"
                android:hint="@string/birthday"
                android:textColorHint="@color/text_color_transparent"
                />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etCity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_standard"
                android:layout_marginVertical="@dimen/margin_small"
                android:hint="@string/city"
                android:textColorHint="@color/text_color_transparent"
                />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etVk"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_standard"
                android:layout_marginVertical="@dimen/margin_small"
                android:hint="@string/vk"
                android:textColorHint="@color/text_color_transparent"
                />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etInstagram"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_standard"
                android:layout_marginVertical="@dimen/margin_small"
                android:hint="@string/instagram"
                android:textColorHint="@color/text_color_transparent"
                />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal"
                android:padding="@dimen/margin_middle_standard"
                android:weightSum="2"
                android:gravity="center"
                android:layout_marginVertical="@dimen/margin_standard_large"
                >

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnCancel"
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/margin_standard_large"
                    android:background="@drawable/bg_button"
                    android:hint="@string/cancel"
                    android:textColorHint="@color/white"
                    android:padding="@dimen/margin_small"
                    android:layout_weight="1"
                    />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnSave"
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/margin_standard_large"
                    android:background="@drawable/bg_button_save"
                    android:hint="@string/save"
                    android:textColorHint="@color/white"
                    android:padding="@dimen/margin_small"
                    android:layout_weight="1"
                    />

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>