<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:cardElevation="@dimen/margin_small"
        app:cardCornerRadius="@dimen/margin_standard"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/margin_standard"
            android:background="@color/card_view_color"
            >

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/margin_standard"
                >

                <TextView
                    android:id="@+id/etPhoneNumberRegister"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    tools:text="+9923233232"
                    android:gravity="center"
                    android:textColor="@color/text_color_transparent"
                    android:background="@color/bg_color"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/margin_middle_standard"
                style="@style/TextInputLayoutStyle"
                >

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/etNameRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"
                    android:inputType="textPersonName"
                    android:maxLength="26"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/margin_middle_standard"
                style="@style/TextInputLayoutStyle"
                >

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/etUsernameRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/username"
                    android:inputType="text"
                    android:maxLength="26"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginVertical="@dimen/margin_standard"
                android:background="@drawable/bg_button"
                android:gravity="center"
                android:layout_marginHorizontal="@dimen/margin_standard"
                android:paddingBottom="@dimen/margin_small"
                android:text="@string/register"
                android:textColor="@android:color/white"
                android:textSize="14sp" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>